Make the QR Code scanner caption fit on multiple lines.

BUG=694739

Review-Url: https://codereview.chromium.org/2709943002
Cr-Commit-Position: refs/heads/master@{#452022}

Former-commit-id: 3974d9eded98f5261afbc2b4315f0c22fdd10072